--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "material-design-icons-iconfont": "^4.0.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.5.12",
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
